--- a/addons/sourcemod/configs/weapons/weapons_finnish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_finnish.cfg
@@ -1,56 +1,141 @@
 "Skins"
 {
-	"Ancient Ritual"
+	"Windblown"
+	{
+		"index"		"1051"
+		"classes"	"weapon_nova;"
+	}
+	"Trigger Discipline"
+	{
+		"index"		"1050"
+		"classes"	"weapon_deagle;"
+	}
+	"Oscillator"
+	{
+		"index"		"1049"
+		"classes"	"weapon_ump45;"
+	}
+	"Heavy Metal"
+	{
+		"index"		"1048"
+		"classes"	"weapon_sg556;"
+	}
+	"Junk Yard"
+	{
+		"index"		"1047"
+		"classes"	"weapon_revolver;"
+	}
+	"XOXO"
+	{
+		"index"		"1046"
+		"classes"	"weapon_xm1014;"
+	}
+	"Button Masher"
+	{
+		"index"		"1045"
+		"classes"	"weapon_mac10;"
+	}
+	"Cyber Shell"
+	{
+		"index"		"1044"
+		"classes"	"weapon_p250;"
+	}
+	"dev_texture"
+	{
+		"index"		"1043"
+		"classes"	"weapon_negev;"
+	}
+	"O.S.I.P.R."
+	{
+		"index"		"1042"
+		"classes"	"weapon_m249;"
+	}
+	"In Living Color"
+	{
+		"index"		"1041"
+		"classes"	"weapon_m4a1;"
+	}
+	"The Traitor"
+	{
+		"index"		"1040"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Clear Polymer"
+	{
+		"index"		"1039"
+		"classes"	"weapon_glock;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1038"
+		"classes"	"weapon_galilar;"
+	}
+	"Food Chain"
+	{
+		"index"		"1037"
+		"classes"	"weapon_mp9;"
+	}
+	"Circaetus"
+	{
+		"index"		"1036"
+		"classes"	"weapon_cz75a;"
+	}
+	"Slate"
+	{
+		"index"		"1035"
+		"classes"	"weapon_ak47;"
+	}
+	"Muinainen rituaali"
 	{
 		"index"		"1034"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Carved Jade"
+	"Veistetty jade"
 	{
 		"index"		"1033"
 		"classes"	"weapon_aug;"
 	}
-	"Dusk Ruins"
+	"Varjoisat rauniot"
 	{
 		"index"		"1032"
 		"classes"	"weapon_galilar;"
 	}
-	"Ancient Visions"
+	"Muinaiset näyt"
 	{
 		"index"		"1031"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Brick"
+	"Kultaharkko"
 	{
 		"index"		"1025"
 		"classes"	"weapon_mac10;"
 	}
-	"Blast From the Past"
+	"Tuulahdus menneisyydestä"
 	{
 		"index"		"1024"
 		"classes"	"weapon_tec9;"
 	}
-	"Tall Grass"
+	"Heinikko"
 	{
 		"index"		"1023"
 		"classes"	"weapon_mp7;"
 	}
-	"Lush Ruins"
+	"Rehevät rauniot"
 	{
 		"index"		"1022"
 		"classes"	"weapon_sg556;"
 	}
-	"Ancient Lore"
+	"Muinainen taru"
 	{
 		"index"		"1021"
 		"classes"	"weapon_xm1014;"
 	}
-	"Ancient Earth"
+	"Muinainen maa"
 	{
 		"index"		"1020"
 		"classes"	"weapon_p90;"
 	}
-	"Panther Camo"
+	"Maastokuosinen pantteri"
 	{
 		"index"		"1019"
 		"classes"	"weapon_hkp2000;"
@@ -60,12 +145,12 @@
 		"index"		"1018"
 		"classes"	"weapon_ak47;"
 	}
-	"Welcome to the Jungle"
+	"Tervetuloa viidakkoon"
 	{
 		"index"		"1001"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Run and Hide"
+	"Pakoon"
 	{
 		"index"		"1000"
 		"classes"	"weapon_p90;"
@@ -75,7 +160,7 @@
 		"index"		"1030"
 		"classes"	"weapon_p250;"
 	}
-	"Silk Tiger"
+	"Silkkitiikeri"
 	{
 		"index"		"1029"
 		"classes"	"weapon_awp;"
@@ -85,67 +170,67 @@
 		"index"		"1016"
 		"classes"	"weapon_glock;"
 	}
-	"Tiger Pit"
+	"Tiikeriansa"
 	{
 		"index"		"1015"
 		"classes"	"weapon_p90;"
 	}
-	"Clay Ambush"
+	"Savinen väijytys"
 	{
 		"index"		"1014"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Phoenix Blacklight"
+	"Phoenix-taustavalo"
 	{
 		"index"		"1013"
 		"classes"	"weapon_galilar;"
 	}
-	"Phoenix Stencil"
+	"Phoenix-sapluuna"
 	{
 		"index"		"1012"
 		"classes"	"weapon_negev;"
 	}
-	"Phoenix Marker"
+	"Phoenix-tussi"
 	{
 		"index"		"1011"
 		"classes"	"weapon_revolver;"
 	}
-	"Phoenix Chalk"
+	"Phoenix-kalkki"
 	{
 		"index"		"1010"
 		"classes"	"weapon_tec9;"
 	}
-	"Hot Snakes"
+	"Kuuma kalkkaro"
 	{
 		"index"		"1009"
 		"classes"	"weapon_mac10;"
 	}
-	"Houndstooth"
+	"Kukonaskel"
 	{
 		"index"		"1008"
 		"classes"	"weapon_ump45;"
 	}
-	"Vault Heist"
+	"Pankkiryöstö"
 	{
 		"index"		"1007"
 		"classes"	"weapon_mp7;"
 	}
-	"Night Heist"
+	"Yökeikka"
 	{
 		"index"		"1006"
 		"classes"	"weapon_deagle;"
 	}
-	"Heist"
+	"Ryöstö"
 	{
 		"index"		"1005"
 		"classes"	"weapon_elite;"
 	}
-	"X-Ray"
+	"Röntgenkuva"
 	{
 		"index"		"1004"
 		"classes"	"weapon_ak47;"
 	}
-	"Blue Phosphor"
+	"Sininen fosfori"
 	{
 		"index"		"1017"
 		"classes"	"weapon_m4a1_silencer;"
@@ -155,7 +240,7 @@
 		"index"		"1028"
 		"classes"	"weapon_scar20;"
 	}
-	"Target Acquired"
+	"Kohdennettu"
 	{
 		"index"		"1027"
 		"classes"	"weapon_usp_silencer;"
@@ -165,42 +250,42 @@
 		"index"		"1026"
 		"classes"	"weapon_awp;"
 	}
-	"Crime Scene"
+	"Rikospaikka"
 	{
 		"index"		"1003"
 		"classes"	"weapon_ump45;"
 	}
-	"Berries And Cherries"
+	"Mustikat ja mansikat"
 	{
 		"index"		"1002"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Prime Conspiracy"
+	"Suuri salaliitto"
 	{
 		"index"		"999"
 		"classes"	"weapon_famas;"
 	}
-	"Switch Board"
+	"Kytkintaulu"
 	{
 		"index"		"998"
 		"classes"	"weapon_elite;"
 	}
-	"Dispatch"
+	"Toimeksianto"
 	{
 		"index"		"997"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Threat Detected"
+	"Uhka havaittu"
 	{
 		"index"		"996"
 		"classes"	"weapon_ssg08;"
 	}
-	"Surveillance"
+	"Valvonta"
 	{
 		"index"		"995"
 		"classes"	"weapon_aug;"
 	}
-	"Charter"
+	"Säädöskokoelma"
 	{
 		"index"		"994"
 		"classes"	"weapon_xm1014;"
@@ -210,22 +295,22 @@
 		"index"		"993"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Bronze"
+	"Pronssi"
 	{
 		"index"		"992"
 		"classes"	"weapon_deagle;"
 	}
-	"Monster Mashup"
+	"Hirviökollaasi"
 	{
 		"index"		"991"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Bismuth"
+	"Kultavismutti"
 	{
 		"index"		"990"
 		"classes"	"weapon_ump45;"
 	}
-	"Parallax"
+	"Parallaksi"
 	{
 		"index"		"989"
 		"classes"	"weapon_ssg08;"
@@ -235,7 +320,7 @@
 		"index"		"988"
 		"classes"	"weapon_glock;"
 	}
-	"Clear Polymer"
+	"Lasipolymeeri"
 	{
 		"index"		"987"
 		"classes"	"weapon_nova;"
@@ -245,7 +330,7 @@
 		"index"		"986"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Cyber Security"
+	"Kyberturva"
 	{
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
@@ -255,27 +340,27 @@
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Deep Relief"
+	"Maastokartta"
 	{
 		"index"		"983"
 		"classes"	"weapon_m249;"
 	}
-	"Contaminant"
+	"Syöpynyt"
 	{
 		"index"		"982"
 		"classes"	"weapon_p250;"
 	}
-	"Vandal"
+	"Kovis"
 	{
 		"index"		"981"
 		"classes"	"weapon_galilar;"
 	}
-	"Digital Mesh"
+	"Digiverkko"
 	{
 		"index"		"980"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Fairy Tale"
+	"Iltasatu"
 	{
 		"index"		"979"
 		"classes"	"weapon_fiveseven;"
@@ -285,17 +370,17 @@
 		"index"		"978"
 		"classes"	"weapon_elite;"
 	}
-	"Cocoa Rampage"
+	"Kaakaonruskea mellakka"
 	{
 		"index"		"977"
 		"classes"	"weapon_p90;"
 	}
-	"Vendetta"
+	"Kosto"
 	{
 		"index"		"976"
 		"classes"	"weapon_cz75a;"
 	}
-	"Exoskeleton"
+	"Tukiranka"
 	{
 		"index"		"975"
 		"classes"	"weapon_awp;"
