--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,71 +1,156 @@
 "Skins"
 {
-	"Ancient Ritual"
+	"Windblown"
+	{
+		"index"		"1051"
+		"classes"	"weapon_nova;"
+	}
+	"Trigger Discipline"
+	{
+		"index"		"1050"
+		"classes"	"weapon_deagle;"
+	}
+	"Oscillator"
+	{
+		"index"		"1049"
+		"classes"	"weapon_ump45;"
+	}
+	"Heavy Metal"
+	{
+		"index"		"1048"
+		"classes"	"weapon_sg556;"
+	}
+	"Junk Yard"
+	{
+		"index"		"1047"
+		"classes"	"weapon_revolver;"
+	}
+	"XOXO"
+	{
+		"index"		"1046"
+		"classes"	"weapon_xm1014;"
+	}
+	"Button Masher"
+	{
+		"index"		"1045"
+		"classes"	"weapon_mac10;"
+	}
+	"Cyber Shell"
+	{
+		"index"		"1044"
+		"classes"	"weapon_p250;"
+	}
+	"dev_texture"
+	{
+		"index"		"1043"
+		"classes"	"weapon_negev;"
+	}
+	"O.S.I.P.R."
+	{
+		"index"		"1042"
+		"classes"	"weapon_m249;"
+	}
+	"In Living Color"
+	{
+		"index"		"1041"
+		"classes"	"weapon_m4a1;"
+	}
+	"The Traitor"
+	{
+		"index"		"1040"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Clear Polymer"
+	{
+		"index"		"1039"
+		"classes"	"weapon_glock;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1038"
+		"classes"	"weapon_galilar;"
+	}
+	"Food Chain"
+	{
+		"index"		"1037"
+		"classes"	"weapon_mp9;"
+	}
+	"Circaetus"
+	{
+		"index"		"1036"
+		"classes"	"weapon_cz75a;"
+	}
+	"Slate"
+	{
+		"index"		"1035"
+		"classes"	"weapon_ak47;"
+	}
+	"Ősi Rituálé"
 	{
 		"index"		"1034"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Carved Jade"
+	"Faragott Jáde"
 	{
 		"index"		"1033"
 		"classes"	"weapon_aug;"
 	}
-	"Dusk Ruins"
+	"Alkonyi Romok"
 	{
 		"index"		"1032"
 		"classes"	"weapon_galilar;"
 	}
-	"Ancient Visions"
+	"Ősi Látomások"
 	{
 		"index"		"1031"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Brick"
+	"Aranyrúd"
 	{
 		"index"		"1025"
 		"classes"	"weapon_mac10;"
 	}
-	"Blast From the Past"
+	"Nosztalgia"
 	{
 		"index"		"1024"
 		"classes"	"weapon_tec9;"
 	}
-	"Tall Grass"
+	"Magas Fű"
 	{
 		"index"		"1023"
 		"classes"	"weapon_mp7;"
 	}
-	"Lush Ruins"
+	"Zöldellő Romok"
 	{
 		"index"		"1022"
 		"classes"	"weapon_sg556;"
 	}
-	"Ancient Lore"
+	"Ősi Történet"
 	{
 		"index"		"1021"
 		"classes"	"weapon_xm1014;"
 	}
-	"Ancient Earth"
+	"Ősi Föld"
 	{
 		"index"		"1020"
 		"classes"	"weapon_p90;"
 	}
-	"Panther Camo"
+	"Párduc Terepminta"
 	{
 		"index"		"1019"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Panthera onca"
+	"Panthera Onca"
 	{
 		"index"		"1018"
 		"classes"	"weapon_ak47;"
 	}
-	"Welcome to the Jungle"
+	"Üdv a Dzsungelben"
 	{
 		"index"		"1001"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Run and Hide"
+	"Fuss és Rejtőzz"
 	{
 		"index"		"1000"
 		"classes"	"weapon_p90;"
@@ -75,7 +160,7 @@
 		"index"		"1030"
 		"classes"	"weapon_p250;"
 	}
-	"Silk Tiger"
+	"Selyemtigris"
 	{
 		"index"		"1029"
 		"classes"	"weapon_awp;"
@@ -85,67 +170,67 @@
 		"index"		"1016"
 		"classes"	"weapon_glock;"
 	}
-	"Tiger Pit"
+	"Tigrisverem"
 	{
 		"index"		"1015"
 		"classes"	"weapon_p90;"
 	}
-	"Clay Ambush"
+	"Agyag Kelepce"
 	{
 		"index"		"1014"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Phoenix Blacklight"
+	"Phoenix Ultraibolya"
 	{
 		"index"		"1013"
 		"classes"	"weapon_galilar;"
 	}
-	"Phoenix Stencil"
+	"Phoenix Sablon"
 	{
 		"index"		"1012"
 		"classes"	"weapon_negev;"
 	}
-	"Phoenix Marker"
+	"Phoenix Filctoll"
 	{
 		"index"		"1011"
 		"classes"	"weapon_revolver;"
 	}
-	"Phoenix Chalk"
+	"Phoenix Kréta"
 	{
 		"index"		"1010"
 		"classes"	"weapon_tec9;"
 	}
-	"Hot Snakes"
+	"Forró Kígyók"
 	{
 		"index"		"1009"
 		"classes"	"weapon_mac10;"
 	}
-	"Houndstooth"
+	"Tyúkláb"
 	{
 		"index"		"1008"
 		"classes"	"weapon_ump45;"
 	}
-	"Vault Heist"
+	"Páncéltermi Rablás"
 	{
 		"index"		"1007"
 		"classes"	"weapon_mp7;"
 	}
-	"Night Heist"
+	"Éjjeli Rablás"
 	{
 		"index"		"1006"
 		"classes"	"weapon_deagle;"
 	}
-	"Heist"
+	"Rablás"
 	{
 		"index"		"1005"
 		"classes"	"weapon_elite;"
 	}
-	"X-Ray"
+	"Röntgen"
 	{
 		"index"		"1004"
 		"classes"	"weapon_ak47;"
 	}
-	"Blue Phosphor"
+	"Kék Foszfor"
 	{
 		"index"		"1017"
 		"classes"	"weapon_m4a1_silencer;"
@@ -155,7 +240,7 @@
 		"index"		"1028"
 		"classes"	"weapon_scar20;"
 	}
-	"Target Acquired"
+	"Cél bemérve"
 	{
 		"index"		"1027"
 		"classes"	"weapon_usp_silencer;"
@@ -165,42 +250,42 @@
 		"index"		"1026"
 		"classes"	"weapon_awp;"
 	}
-	"Crime Scene"
+	"Bűnügyi Helyszín"
 	{
 		"index"		"1003"
 		"classes"	"weapon_ump45;"
 	}
-	"Berries And Cherries"
+	"Bogyók és Cseresznyék"
 	{
 		"index"		"1002"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Prime Conspiracy"
+	"Elsődleges Összeesküvés"
 	{
 		"index"		"999"
 		"classes"	"weapon_famas;"
 	}
-	"Switch Board"
+	"Kapcsolótábla"
 	{
 		"index"		"998"
 		"classes"	"weapon_elite;"
 	}
-	"Dispatch"
+	"Irányító"
 	{
 		"index"		"997"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Threat Detected"
+	"Veszélyészlelés"
 	{
 		"index"		"996"
 		"classes"	"weapon_ssg08;"
 	}
-	"Surveillance"
+	"Felderítés"
 	{
 		"index"		"995"
 		"classes"	"weapon_aug;"
 	}
-	"Charter"
+	"Kiváltságlevél"
 	{
 		"index"		"994"
 		"classes"	"weapon_xm1014;"
@@ -210,32 +295,32 @@
 		"index"		"993"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Bronze"
+	"A Bronz"
 	{
 		"index"		"992"
 		"classes"	"weapon_deagle;"
 	}
-	"Monster Mashup"
+	"Szörnyegyveleg"
 	{
 		"index"		"991"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Bismuth"
+	"Arany bizmut"
 	{
 		"index"		"990"
 		"classes"	"weapon_ump45;"
 	}
-	"Parallax"
+	"Parallaxis"
 	{
 		"index"		"989"
 		"classes"	"weapon_ssg08;"
 	}
-	"Neo-Noir"
+	"Neonoir"
 	{
 		"index"		"988"
 		"classes"	"weapon_glock;"
 	}
-	"Clear Polymer"
+	"Áttetsző polimer"
 	{
 		"index"		"987"
 		"classes"	"weapon_nova;"
@@ -245,57 +330,57 @@
 		"index"		"986"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Cyber Security"
+	"Kiberbiztonság"
 	{
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"Nyomdafolyam"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Deep Relief"
+	"Mély megkönnyebbülés"
 	{
 		"index"		"983"
 		"classes"	"weapon_m249;"
 	}
-	"Contaminant"
+	"Szennyezés"
 	{
 		"index"		"982"
 		"classes"	"weapon_p250;"
 	}
-	"Vandal"
+	"Vandál"
 	{
 		"index"		"981"
 		"classes"	"weapon_galilar;"
 	}
-	"Digital Mesh"
+	"Digitális háló"
 	{
 		"index"		"980"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Fairy Tale"
+	"Tündérmese"
 	{
 		"index"		"979"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Dezastre"
+	"Csapás"
 	{
 		"index"		"978"
 		"classes"	"weapon_elite;"
 	}
-	"Cocoa Rampage"
+	"Kakaószín tombolás"
 	{
 		"index"		"977"
 		"classes"	"weapon_p90;"
 	}
-	"Vendetta"
+	"Vérbosszú"
 	{
 		"index"		"976"
 		"classes"	"weapon_cz75a;"
 	}
-	"Exoskeleton"
+	"Külső váz"
 	{
 		"index"		"975"
 		"classes"	"weapon_awp;"
