--- a/addons/sourcemod/configs/weapons/weapons_norwegian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_norwegian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Windblown"
+	{
+		"index"		"1051"
+		"classes"	"weapon_nova;"
+	}
+	"Trigger Discipline"
+	{
+		"index"		"1050"
+		"classes"	"weapon_deagle;"
+	}
+	"Oscillator"
+	{
+		"index"		"1049"
+		"classes"	"weapon_ump45;"
+	}
+	"Heavy Metal"
+	{
+		"index"		"1048"
+		"classes"	"weapon_sg556;"
+	}
+	"Junk Yard"
+	{
+		"index"		"1047"
+		"classes"	"weapon_revolver;"
+	}
+	"XOXO"
+	{
+		"index"		"1046"
+		"classes"	"weapon_xm1014;"
+	}
+	"Button Masher"
+	{
+		"index"		"1045"
+		"classes"	"weapon_mac10;"
+	}
+	"Cyber Shell"
+	{
+		"index"		"1044"
+		"classes"	"weapon_p250;"
+	}
+	"dev_texture"
+	{
+		"index"		"1043"
+		"classes"	"weapon_negev;"
+	}
+	"O.S.I.P.R."
+	{
+		"index"		"1042"
+		"classes"	"weapon_m249;"
+	}
+	"In Living Color"
+	{
+		"index"		"1041"
+		"classes"	"weapon_m4a1;"
+	}
+	"The Traitor"
+	{
+		"index"		"1040"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Clear Polymer"
+	{
+		"index"		"1039"
+		"classes"	"weapon_glock;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1038"
+		"classes"	"weapon_galilar;"
+	}
+	"Food Chain"
+	{
+		"index"		"1037"
+		"classes"	"weapon_mp9;"
+	}
+	"Circaetus"
+	{
+		"index"		"1036"
+		"classes"	"weapon_cz75a;"
+	}
+	"Slate"
+	{
+		"index"		"1035"
+		"classes"	"weapon_ak47;"
+	}
 	"Ancient Ritual"
 	{
 		"index"		"1034"
@@ -2505,12 +2590,12 @@
 		"index"		"473"
 		"classes"	"weapon_mag7;"
 	}
-	"Slagbor"
+	"Impact Drill"
 	{
 		"index"		"472"
 		"classes"	"weapon_m249;"
 	}
-	"Daggry"
+	"Daybreak"
 	{
 		"index"		"471"
 		"classes"	"weapon_m4a1;"
@@ -2550,7 +2635,7 @@
 		"index"		"464"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Terrasse"
+	"Terrace"
 	{
 		"index"		"463"
 		"classes"	"weapon_tec9;"
@@ -3125,7 +3210,7 @@
 		"index"		"346"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Førsteklasses"
+	"First Class"
 	{
 		"index"		"345"
 		"classes"	"weapon_sawedoff;"
@@ -3145,7 +3230,7 @@
 		"index"		"342"
 		"classes"	"weapon_p90;"
 	}
-	"Førsteklasses"
+	"First Class"
 	{
 		"index"		"341"
 		"classes"	"weapon_ak47;"
