--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -1,71 +1,156 @@
 "Skins"
 {
-	"Ancient Ritual"
+	"Windblown"
+	{
+		"index"		"1051"
+		"classes"	"weapon_nova;"
+	}
+	"Trigger Discipline"
+	{
+		"index"		"1050"
+		"classes"	"weapon_deagle;"
+	}
+	"Oscillator"
+	{
+		"index"		"1049"
+		"classes"	"weapon_ump45;"
+	}
+	"Heavy Metal"
+	{
+		"index"		"1048"
+		"classes"	"weapon_sg556;"
+	}
+	"Junk Yard"
+	{
+		"index"		"1047"
+		"classes"	"weapon_revolver;"
+	}
+	"XOXO"
+	{
+		"index"		"1046"
+		"classes"	"weapon_xm1014;"
+	}
+	"Button Masher"
+	{
+		"index"		"1045"
+		"classes"	"weapon_mac10;"
+	}
+	"Cyber Shell"
+	{
+		"index"		"1044"
+		"classes"	"weapon_p250;"
+	}
+	"dev_texture"
+	{
+		"index"		"1043"
+		"classes"	"weapon_negev;"
+	}
+	"O.S.I.P.R."
+	{
+		"index"		"1042"
+		"classes"	"weapon_m249;"
+	}
+	"In Living Color"
+	{
+		"index"		"1041"
+		"classes"	"weapon_m4a1;"
+	}
+	"The Traitor"
+	{
+		"index"		"1040"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Clear Polymer"
+	{
+		"index"		"1039"
+		"classes"	"weapon_glock;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1038"
+		"classes"	"weapon_galilar;"
+	}
+	"Food Chain"
+	{
+		"index"		"1037"
+		"classes"	"weapon_mp9;"
+	}
+	"Circaetus"
+	{
+		"index"		"1036"
+		"classes"	"weapon_cz75a;"
+	}
+	"Slate"
+	{
+		"index"		"1035"
+		"classes"	"weapon_ak47;"
+	}
+	"Древній ритуал"
 	{
 		"index"		"1034"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Carved Jade"
+	"Різьблений нефрит"
 	{
 		"index"		"1033"
 		"classes"	"weapon_aug;"
 	}
-	"Dusk Ruins"
+	"Сутінкові руїни"
 	{
 		"index"		"1032"
 		"classes"	"weapon_galilar;"
 	}
-	"Ancient Visions"
+	"Древнє бачення"
 	{
 		"index"		"1031"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Brick"
+	"Золота цеглина"
 	{
 		"index"		"1025"
 		"classes"	"weapon_mac10;"
 	}
-	"Blast From the Past"
+	"Вибух із минулого"
 	{
 		"index"		"1024"
 		"classes"	"weapon_tec9;"
 	}
-	"Tall Grass"
+	"Висока трава"
 	{
 		"index"		"1023"
 		"classes"	"weapon_mp7;"
 	}
-	"Lush Ruins"
+	"Зарослі руїни"
 	{
 		"index"		"1022"
 		"classes"	"weapon_sg556;"
 	}
-	"Ancient Lore"
+	"Древнє знання"
 	{
 		"index"		"1021"
 		"classes"	"weapon_xm1014;"
 	}
-	"Ancient Earth"
+	"Древня земля"
 	{
 		"index"		"1020"
 		"classes"	"weapon_p90;"
 	}
-	"Panther Camo"
+	"Камуфляж пантери"
 	{
 		"index"		"1019"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Panthera onca"
+	"Ягуар"
 	{
 		"index"		"1018"
 		"classes"	"weapon_ak47;"
 	}
-	"Welcome to the Jungle"
+	"Вітаємо в джунглях"
 	{
 		"index"		"1001"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Run and Hide"
+	"Біжи й ховайся"
 	{
 		"index"		"1000"
 		"classes"	"weapon_p90;"
@@ -75,7 +160,7 @@
 		"index"		"1030"
 		"classes"	"weapon_p250;"
 	}
-	"Silk Tiger"
+	"Шовковий тигр"
 	{
 		"index"		"1029"
 		"classes"	"weapon_awp;"
@@ -85,77 +170,77 @@
 		"index"		"1016"
 		"classes"	"weapon_glock;"
 	}
-	"Tiger Pit"
+	"Яма з тиграми"
 	{
 		"index"		"1015"
 		"classes"	"weapon_p90;"
 	}
-	"Clay Ambush"
+	"Глиняна засідка"
 	{
 		"index"		"1014"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Phoenix Blacklight"
+	"Ультрафіолет «Фенікса»"
 	{
 		"index"		"1013"
 		"classes"	"weapon_galilar;"
 	}
-	"Phoenix Stencil"
+	"Трафарет «Фенікса»"
 	{
 		"index"		"1012"
 		"classes"	"weapon_negev;"
 	}
-	"Phoenix Marker"
+	"Маркер «Фенікса»"
 	{
 		"index"		"1011"
 		"classes"	"weapon_revolver;"
 	}
-	"Phoenix Chalk"
+	"Крейда «Фенікса»"
 	{
 		"index"		"1010"
 		"classes"	"weapon_tec9;"
 	}
-	"Hot Snakes"
+	"Пекучі змії"
 	{
 		"index"		"1009"
 		"classes"	"weapon_mac10;"
 	}
-	"Houndstooth"
+	"Гусячі лапки"
 	{
 		"index"		"1008"
 		"classes"	"weapon_ump45;"
 	}
-	"Vault Heist"
+	"Пограбування сховища"
 	{
 		"index"		"1007"
 		"classes"	"weapon_mp7;"
 	}
-	"Night Heist"
+	"Нічне пограбування"
 	{
 		"index"		"1006"
 		"classes"	"weapon_deagle;"
 	}
-	"Heist"
+	"Пограбування"
 	{
 		"index"		"1005"
 		"classes"	"weapon_elite;"
 	}
-	"X-Ray"
+	"Рентген"
 	{
 		"index"		"1004"
 		"classes"	"weapon_ak47;"
 	}
-	"Blue Phosphor"
+	"Синій фосфор"
 	{
 		"index"		"1017"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Magna Carta"
+	"Велика хартія вольностей"
 	{
 		"index"		"1028"
 		"classes"	"weapon_scar20;"
 	}
-	"Target Acquired"
+	"Ціль визначено"
 	{
 		"index"		"1027"
 		"classes"	"weapon_usp_silencer;"
@@ -165,137 +250,137 @@
 		"index"		"1026"
 		"classes"	"weapon_awp;"
 	}
-	"Crime Scene"
+	"Місце злочину"
 	{
 		"index"		"1003"
 		"classes"	"weapon_ump45;"
 	}
-	"Berries And Cherries"
+	"Ягоди та вишні"
 	{
 		"index"		"1002"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Prime Conspiracy"
+	"Глобальна змова"
 	{
 		"index"		"999"
 		"classes"	"weapon_famas;"
 	}
-	"Switch Board"
+	"Зміна сторін"
 	{
 		"index"		"998"
 		"classes"	"weapon_elite;"
 	}
-	"Dispatch"
+	"Регулятор"
 	{
 		"index"		"997"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Threat Detected"
+	"Загрозу виявлено"
 	{
 		"index"		"996"
 		"classes"	"weapon_ssg08;"
 	}
-	"Surveillance"
+	"Спостереження"
 	{
 		"index"		"995"
 		"classes"	"weapon_aug;"
 	}
-	"Charter"
+	"Хартія"
 	{
 		"index"		"994"
 		"classes"	"weapon_xm1014;"
 	}
-	"Global Offensive"
+	"Глобальний наступ"
 	{
 		"index"		"993"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Bronze"
+	"Бронзовий"
 	{
 		"index"		"992"
 		"classes"	"weapon_deagle;"
 	}
-	"Monster Mashup"
+	"Потворна суміш"
 	{
 		"index"		"991"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Bismuth"
+	"Золотий вісмут"
 	{
 		"index"		"990"
 		"classes"	"weapon_ump45;"
 	}
-	"Parallax"
+	"Паралакс"
 	{
 		"index"		"989"
 		"classes"	"weapon_ssg08;"
 	}
-	"Neo-Noir"
+	"Нео-нуар"
 	{
 		"index"		"988"
 		"classes"	"weapon_glock;"
 	}
-	"Clear Polymer"
+	"Прозорий полімер"
 	{
 		"index"		"987"
 		"classes"	"weapon_nova;"
 	}
-	"Condition Zero"
+	"Нульова умова"
 	{
 		"index"		"986"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Cyber Security"
+	"Кібербезпека"
 	{
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"Друкопис"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Deep Relief"
+	"Глибокий рельєф"
 	{
 		"index"		"983"
 		"classes"	"weapon_m249;"
 	}
-	"Contaminant"
+	"Забруднювач"
 	{
 		"index"		"982"
 		"classes"	"weapon_p250;"
 	}
-	"Vandal"
+	"Вандал"
 	{
 		"index"		"981"
 		"classes"	"weapon_galilar;"
 	}
-	"Digital Mesh"
+	"Цифрова сітка"
 	{
 		"index"		"980"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Fairy Tale"
+	"Казка"
 	{
 		"index"		"979"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Dezastre"
+	"Катастрофа"
 	{
 		"index"		"978"
 		"classes"	"weapon_elite;"
 	}
-	"Cocoa Rampage"
+	"Какаове шаленство"
 	{
 		"index"		"977"
 		"classes"	"weapon_p90;"
 	}
-	"Vendetta"
+	"Кровна помста"
 	{
 		"index"		"976"
 		"classes"	"weapon_cz75a;"
 	}
-	"Exoskeleton"
+	"Екзоскелет"
 	{
 		"index"		"975"
 		"classes"	"weapon_awp;"
