snakebite case skins translations updated by valve

--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1,86 +1,86 @@
 "Skins"
 {
-	"Windblown"
+	"Отнесено от вихъра"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Дисциплина на спусъка"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Осцилатор"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Хеви метъл"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Бунище"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"XOXO"
+	"ХОХО"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Блъскане по бутоните"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Кибер броня"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"dev_texture"
+	"Текстура_за_разработка"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"O.S.I.P.R."
+	"С.Е.И.В.С."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"Жизнени цветове"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Изменникът"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Прозиращ полимер"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Хроматична аберация"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Хранителна верига"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Circaetus"
+	"Орел змияр"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Плоча"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
