--- a/addons/sourcemod/configs/weapons/weapons_czech.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_czech.cfg
@@ -55,7 +55,7 @@
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
