--- a/addons/sourcemod/configs/weapons/weapons_french.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_french.cfg
@@ -20,7 +20,7 @@
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Décharge"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -35,7 +35,7 @@
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Cyberbouclier"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -60,17 +60,17 @@
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Polymère transparent"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Aberration chromatique"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Chaine alimentaire"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Ardoise"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
