--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -65,17 +65,17 @@
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Chromatische Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Nahrungskette"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Circaetus"
+	"Schlangenadler"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
