--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -1,26 +1,26 @@
 "Skins"
 {
-	"Windblown"
+	"Niesiony przez wiatr"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Opanowanie spustu"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Oscylator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Heavy metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Złomowisko"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +30,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Mashowanie guzików"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Cyberpowłoka"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,32 +45,32 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"O.S.I.P.R."
+	"SKPK"
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"W żywe kolory"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Zdrajca"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Przezroczysty polimer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Aberracja chromatyczna"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Łańcuch pokarmowy"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Czerń"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
