--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,41 +1,41 @@
 "Skins"
 {
-	"Windblown"
+	"На крыльях ветра"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Стрелковая дисциплина"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Осциллятор"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Тяжёлый метал"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Автосвалка"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"XOXO"
+	"Целую-обнимаю"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Кнопкодав"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Киберпанцирь"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -50,37 +50,37 @@
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"В живом цвете"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Предатель"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Прозрачный полимер"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Хроматическая аберрация"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Пищевая цепь"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Circaetus"
+	"Настоящий змееяд"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Сланец"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
