--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,46 +1,46 @@
 "Skins"
 {
-	"Windblown"
+	"随风"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"后发制人"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"动摇"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"重金属摇滚"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"废物王"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"XOXO"
+	"要抱抱"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"战争手柄"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"赛博先锋"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"dev_texture"
+	"橙灰之名"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
@@ -50,37 +50,37 @@
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"活色生香"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"倒吊人"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"一目了然"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"迷人眼"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"爆裂食物链"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Circaetus"
+	"短趾雕"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"墨岩"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
