--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,16 +1,16 @@
 "Skins"
 {
-	"Windblown"
+	"Karahindiba"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Tetik Disiplini"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Osilatör"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
@@ -20,7 +20,7 @@
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Hurdalık"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +30,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Buton Basıcı"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Siber Kabuk"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,42 +45,42 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"O.S.I.P.R."
+	"SGGEET"
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"Renk Cümbüşü"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Hain"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Şeffaf Polimer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Renk Sapmaları"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Besin Zinciri"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Circaetus"
+	"Yılan Kartalı"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Simsiyah"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
@@ -2465,7 +2465,7 @@
 		"index"		"498"
 		"classes"	"weapon_mac10;"
 	}
-	"Altın Bobin"
+	"Altın Yılan"
 	{
 		"index"		"497"
 		"classes"	"weapon_m4a1_silencer;"
