--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Windblown"
+	"Sopro Eólico"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Disciplina no Gatilho"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Osciladora"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Metal Pesado"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
@@ -25,52 +25,52 @@
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"XOXO"
+	"BJS"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Abotoada"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Proteção Cibernética"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"dev_texture"
+	"dev_textura"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"O.S.I.P.R."
+	"IPV-RP"
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"Ao Vivo e a Cores"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Traíra"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Polímero Transparente"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Aberração Cromática"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Cadeia Alimentar"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Tons de Preto"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
