--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,41 +1,41 @@
 "Skins"
 {
-	"Windblown"
+	"Viento"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Disciplina de gatillo"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Oscilador"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Metal pesado"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Carne de desguace"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"XOXO"
+	"TQM"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Machacabotones"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Ciberescudo"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,32 +45,32 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"O.S.I.P.R."
+	"R.P.R.V."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"Colores vivos"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"El Traidor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Polímero transparente"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatic Aberration"
+	"Aberración cromática"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Food Chain"
+	"Cadena alimenticia"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Pizarra"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
